Remove createTableInfo from SRF in favor of a objectType
This removes a bit of duplication between using the TableInfo to
describe the result columns and having a returnType that also describes
the result.

It also clarifies the semantics and implicit type change from objectType
to a non-composite type in case a SRF it is used as an expression with a
single column.